--- a/templates/miner.html
+++ b/templates/miner.html
@@ -26,7 +26,7 @@
 
 <div>
     <span id="gameEnd" class="end-game"></span>
-    <img id="pic" src="../static/src/deepnude.png" style="display: none;" />
+    <img id="pic" src="../static/src/win.jpg" style="display: none;" />
 </div>
 
 
