--- a/templates/miner1.html
+++ b/templates/miner1.html
@@ -35,7 +35,7 @@
     </div>
 </div>
 
-<script type="text/javascript" src="../static/js/task_3.js"></script>
+<script type="text/javascript" src="../static/js/task_3_1.js"></script>
 </body>
 </html>
 
