--- a/templates/clock1.html
+++ b/templates/clock1.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Сыграем в одну игру?</title>
-    <link rel="stylesheet" type="text/css" href="../css/clock.css"/>
+    <link rel="stylesheet" type="text/css" href="../static/css/clock.css"/>
 </head>
 <body>
 
@@ -568,8 +568,8 @@
     </div>
 </div>
 
-<script type="text/javascript" src="../js/jquery.js"></script>
-<script type="text/javascript" src="../js/task_5.js"></script>
+<script type="text/javascript" src="../static/js/jquery.js"></script>
+<script type="text/javascript" src="../static/js/task_5.js"></script>
 </body>
 </html>
 
