--- a/templates/results.html
+++ b/templates/results.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>Подведём итоги</title>
     <link href="../static/assets/css/main2.css" rel="stylesheet" type="text/css"/>
     <link href="../static/assets/css/myCSS2.css" rel="stylesheet" type="text/css"/>
