--- a/templates/game_step.html
+++ b/templates/game_step.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
+{#    <meta charset="utf-8">#}
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Выбирай)</title>
     <link href="../static/assets/css/main2.css" rel="stylesheet" type="text/css"/>
     <link href="../static/assets/css/myCSS2.css" rel="stylesheet" type="text/css"/>
@@ -9,7 +10,7 @@
 <body>
 <h1 align="center"> Список персонажей </h1>
 <div class="wrapper inner content" align="center">
-    <form action="/game/step" method="post">
+    <form action="/game/step" method="post" accept-charset="UTF-8">
         {% if error %}
             <label class="font">Выбери каждому свою участь!</label>
         {% endif %}
@@ -52,6 +53,8 @@
         </div>
         <input type="submit" class="button primary font"
                name="startGame" value="Дальше">
+       <input type="hidden" name="game_uuid" value="{{ game_uuid }}">
+       <input type="hidden" name="current_step" value="{{ current_step }}">
     </form>
 </div>
 <!-- Scripts -->
